<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolRegistration</string>
    <string name="action_settings">Settings</string>
    <string name="button_schools">Schools</string>
    <string name="button_students">Students</string>
    <string name="welcome">This is a demonstration app. Choose Schools or Students to get started.</string>
    <string name="title_activity_display_schools">Schools</string>
    <string name="schools">Schools</string>
    <string name="schools_table_name">Name</string>
    <string name="schools_table_city">City</string>
    <string name="schools_table_state">State</string>
    <string name="schools_table_zip">Zip</string>
    <string name="title_activity_display_students">Students</string>
    <string name="students">Students</string>
    <string name="title_activity_display_school">DisplaySchoolActivity</string>
    <string name="school_details_name">Name: </string>
    <string name="school_details_street">Street: </string>
    <string name="school_details_citystatezip">City, State, Zip: </string>
    <string name="school_details_gradelevels">Grade Levels: </string>
    <string name="school_details_students">Enrolled Students</string>
    <string name="students_table_lastname">Last Name</string>
    <string name="students_table_firstname">First Name</string>
    <string name="students_table_sex">Sex</string>
    <string name="students_table_age">Age</string>
    <string name="students_table_gradelevel">Grade Level</string>
        
</resources>