<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplaySchoolActivity" >

    <TextView
        android:id="@+id/school_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_details_name" />
    <TextView
        android:id="@+id/school_details_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_details_street" />
    <TextView
        android:id="@+id/school_details_citystatezip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_details_citystatezip" />
    <TextView
        android:id="@+id/school_details_gradelevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_details_gradelevels" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/school_details_students" />

    <TableLayout
        android:id="@+id/school_details_students_table"
   	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".DisplaySchoolActivity" >
	    <TableRow 
	        android:layout_width="match_parent">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/students_table_lastname" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/students_table_firstname" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/students_table_sex" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/students_table_age" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/students_table_gradelevel" />
   	    </TableRow>    
	</TableLayout>
    
</LinearLayout>